senzing-factory/build-resources#185 add spellcheck (#41)